--- a/public/static/locales/pl/common.json
+++ b/public/static/locales/pl/common.json
@@ -4,7 +4,7 @@
         "systemError": "We're sorry but something went wrong!",
         "retry_error_code": "Connectivity issues",
         "retry_error_description": "Try to reload the page",
-        "invalid": "This order is not accessible.",
+        "invalid": "To zamówienie nie jest dostępne.",
         "edit": "Edit",
         "free": "Free",
         "apply": "Apply",
